Corrected response path